# HFileSDK

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  README.md  TESTING.md  jni-java-perf-report-20260419-formal.md  jni-java-perf-report-20260419-latest.md  jni-java-perf-report-20260419.md  perf-matrix-report-20260411.json  perf-matrix-report-parallel-dir-20260411.json  perf-report-tdr20550-fixedts-20260412.md  perf-report-tdr20550-unsorted-20260411.md
bench/java/: pom.xml
bench/java/src/main/java/io/hfilesdk/bench/: HFileBenchmark.java
bench/macro/: bm_e2e_write.cc
bench/micro/: bm_arrow_to_kv.cc  bm_bloom.cc  bm_compress.cc  bm_crc32c.cc  bm_kv_encode.cc
cmake/: coverage_feature_matrix_fragment.html  llvm_cov_report.cmake.in  run_java_hbase_verify.cmake
docs/: 01_CODE_MAP.md  02_CONVERSION_PIPELINE.md  03_HFILE_V3_FORMAT.md  04_ROW_KEY_ENGINE.md  05_BLOCK_ENCODERS.md  06_PRODUCTION_FEATURES.md  07_WRITER_DEEP_DIVE.md  ARROW_TO_HFILE_READING_GUIDE.md  ARROW_TO_KV_CONVERTER_DEEP_DIVE.md  BULK_LOAD_WRITER_DEEP_DIVE.md  CONVERTER_CC_DEEP_DIVE.md  HFILE_LOW_LEVEL_MODULES_DEEP_DIVE.md  JNI_HFILESDK_DEEP_DIVE.md  README.md  ROW_KEY_BUILDER_DEEP_DIVE.md  SRC_CODE_MAP.md  WRITER_CC_DEEP_DIVE.md
include/hfile/: bulk_load_writer.h  hfile.h  region_partitioner.h  status.h  types.h  writer.h  writer_options.h
java/: pom.xml
java/src/main/java/com/hfile/: HFileSDK.java
java/src/test/java/com/hfile/: HFileSDKIntegrationTest.java
proto/: hfile_file_info.proto  hfile_trailer.proto
scripts/: README.md  _run_msys2_script.bat  bench-runner.bat  bench-runner.sh  build.bat  build.sh  check_code_style.sh  clean.sh  coverage.bat  coverage.sh  hfile-bulkload-perf-runner.sh  release.sh  test.bat  test.sh
src/: bulk_load_writer.cc  writer.cc
src/arrow/: arrow_to_kv_converter.cc  arrow_to_kv_converter.h  row_key_builder.cc  row_key_builder.h
src/block/: block_builder.cc  data_block_encoder.h  diff_encoder.cc  diff_encoder.h  fast_diff_encoder.cc  fast_diff_encoder.h  none_encoder.cc  none_encoder.h  prefix_encoder.cc  prefix_encoder.h
src/bloom/: compound_bloom_filter_writer.cc  compound_bloom_filter_writer.h
src/checksum/: crc32c.cc  crc32c.h
src/codec/: compression_executor.cc  compression_executor.h  compressor.cc  compressor.h
src/convert/: convert_options.h  converter.cc  converter.h
src/index/: block_index_writer.cc  block_index_writer.h
src/io/: atomic_file_writer.cc  atomic_file_writer.h  buffered_writer.cc  buffered_writer.h  hdfs_writer.cc  hdfs_writer.h  iouring_writer.cc  iouring_writer.h
src/jni/: hfile_jni.cc  jni_utils.h  json_utils.h
src/memory/: aligned_allocator.h  arena_allocator.cc  arena_allocator.h  block_pool.cc  block_pool.h  memory_budget.cc  memory_budget.h
src/meta/: file_info_builder.cc  file_info_builder.h  trailer_builder.cc  trailer_builder.h
src/metrics/: metrics_registry.cc  metrics_registry.h
src/partition/: cf_grouper.cc  cf_grouper.h  region_partitioner.cc
test/: test_arrow_converter.cc  test_block_builder.cc  test_block_pool_extra.cc  test_bloom_filter.cc  test_bulk_load_writer_behavior.cc  test_cf_grouper.cc  test_compressor.cc  test_compressor_error_paths.cc  test_converter_additional_coverage.cc  test_converter_hotpath_grouped.cc  test_converter_more_coverage.cc  test_crc32c.cc  test_diff_encoder.cc  test_fast_diff_encoder.cc  test_file_info.cc  test_hfile_writer.cc  test_index_writer.cc  test_io_writer_error_paths_extra.cc  test_io_writers.cc  test_jni_json_utils.cc  test_kv_encoding.cc  test_memory_allocators.cc  test_prefix_encoder.cc  test_production_features.cc  test_region_partitioner.cc  test_round3_bugs.cc  test_row_key_builder.cc  test_status_types_extra.cc  test_trailer.cc  test_writer_additional_coverage.cc  test_writer_hotpath_and_edge_cases.cc
tools/arrow-to-hfile/: README.md  pom.xml
tools/arrow-to-hfile-java/: README.md  pom.xml
tools/arrow-to-hfile-java/src/main/java/io/hfilesdk/converter/javaimpl/: ArrowToHFileJavaConverter.java  FixedLevelGzipCodec.java  JavaConvertException.java  JavaConvertOptions.java  JavaConvertResult.java
tools/arrow-to-hfile-java/src/test/java/io/hfilesdk/converter/javaimpl/: ArrowToHFileJavaConverterTest.java
tools/arrow-to-hfile/src/main/java/com/hfile/: HFileSDK.java
tools/arrow-to-hfile/src/main/java/io/hfilesdk/converter/: AdaptiveBatchConverter.java  ArrowFileMerger.java  ArrowToHFileConverter.java  BatchArrowToHFileConverter.java  BatchConvertOptions.java  BatchConvertResult.java  ConvertException.java  ConvertOptions.java  ConvertResult.java  NativeLibLoadException.java  NativeLibLoader.java
tools/arrow-to-hfile/src/test/java/com/hfile/: HFileSDKIntegrationTest.java
tools/arrow-to-hfile/src/test/java/io/hfilesdk/converter/: AdaptiveBatchConverterTest.java  ArrowFileMergerTest.java  ArrowToHFileConverterSessionTest.java  ConvertOptionsTest.java  ConvertResultTest.java
tools/hfile-bulkload-perf/: README.md  pom.xml
tools/hfile-bulkload-perf/src/main/java/com/hfile/: HFileSDK.java
tools/hfile-bulkload-perf/src/main/java/io/hfilesdk/perf/: BulkLoadPerfRunner.java  NativeLibLoader.java
tools/hfile-bulkload-perf/src/test/java/io/hfilesdk/perf/: BulkLoadPerfRunnerTest.java  HFileConsistencyTest.java
tools/hfile-bulkload-verify/: pom.xml
tools/hfile-bulkload-verify/src/main/java/io/hfilesdk/verify/: BulkLoadVerifier.java
tools/hfile-chaos/: README.md  main.cc
tools/hfile-report/: hfile-report.py
tools/hfile-verify/: dependency-reduced-pom.xml  pom.xml
tools/hfile-verify/src/main/java/io/hfilesdk/verify/: HFileVerifier.java
tools/hfile-verify/src/test/java/io/hfilesdk/verify/: HFileVerifierTest.java
tools/mock-arrow/: README.md  pom.xml
tools/mock-arrow/src/main/java/io/hfilesdk/mock/: MockArrowGenerator.java  RowGenerator.java  TableSchema.java
tools/mock-arrow/src/main/java/io/hfilesdk/mockarrow/: MockArrowGenerator.java
tools/mock-arrow/src/test/java/io/hfilesdk/mock/: MockArrowGeneratorTest.java
